// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SponsorLogo Component renders correctly with Gold Level 1`] = `
<Component
  style={
    Object {
      "height": "48%",
      "width": "75%",
    }
  }
>
  <Image
    accessibilityLabel="sponsorName"
    resizeMode="contain"
    source={
      Object {
        "height": 357,
        "id": "3CU8n6O760GJ80Wr7r",
        "revision": 1,
        "uri": "//red-badger.com/G36Nw4N4Qb1HE305M0V.jpg",
        "width": 891,
      }
    }
    style={
      Object {
        "maxHeight": "100%",
        "maxWidth": "100%",
      }
    }
  />
</Component>
`;

exports[`SponsorLogo Component renders correctly with Silver Level 1`] = `
<Component
  style={
    Object {
      "height": "48%",
      "width": "80%",
    }
  }
>
  <Image
    accessibilityLabel="sponsorName"
    resizeMode="contain"
    source={
      Object {
        "height": 357,
        "id": "3CU8n6O760GJ80Wr7r",
        "revision": 1,
        "uri": "//red-badger.com/G36Nw4N4Qb1HE305M0V.jpg",
        "width": 891,
      }
    }
    style={
      Object {
        "maxHeight": "100%",
        "maxWidth": "100%",
      }
    }
  />
</Component>
`;
